Updating to 9dfc93b7ca02d6fe3eaf901ea26519b11204a35e.

--- a/schema/generators.html
+++ b/schema/generators.html
@@ -88,6 +88,7 @@
 <ul>
   <li><code class="highlighter-rouge">--relay</code> will add <a href="https://facebook.github.io/relay/">Relay</a>-specific code to your schema</li>
   <li><code class="highlighter-rouge">--batch</code> will add <a href="https://github.com/Shopify/graphql-batch">GraphQL::Batch</a> to your gemfile and include the setup in your schema</li>
+  <li><code class="highlighter-rouge">--playground</code> will include <code class="highlighter-rouge">graphql_playground-rails</code> in the setup (mounted at <code class="highlighter-rouge">/playground</code>)</li>
   <li><code class="highlighter-rouge">--no-graphiql</code> will exclude <code class="highlighter-rouge">graphiql-rails</code> from the setup</li>
   <li><code class="highlighter-rouge">--schema=MySchemaName</code> will be used for naming the schema (default is <code class="highlighter-rouge">#{app_name}Schema</code>)</li>
 </ul>
